[package]
name = "protosocks"
version = "0.7.0"
authors = ["hlzhang <hlzhang@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Socks5 protocol lib in Rust (RFC1928 and RFC1929)"
homepage = "https://github.com/hlzhang/protosocks/"
repository = "https://github.com/hlzhang/protosocks/"
documentation = "https://docs.rs/protosocks"
readme = "README.md"
exclude = [
    ".circleci/*",
    ".gitignore",
    ".travis.yml",
    ".versionrc.js",
    "ver",
]

[dependencies]
bytes = "1"
log = "0.4"
num-traits = "0.2"
num-derive = "0.3"
serde = "1"
serde_derive = "1"
#smolsocket = { version = "0.3", default-features = false }
smolsocket = { path = "../smolsocket", default-features = false }
snafu = "0.6.10"

[dev-dependencies]
lazy_static = "1.4.0"
pretty_env_logger = "0.3"

[features]
std = ["smolsocket/std"]
"proto-ipv4" = ["smolsocket/proto-ipv4"]
"proto-ipv6" = ["smolsocket/proto-ipv6"]
default = [
    "proto-ipv4", "proto-ipv6",
    "std"
]
